Align center resolved

--- a/src/hieroglyph/themes/slides2/static/theme/scss/default.scss
+++ b/src/hieroglyph/themes/slides2/static/theme/scss/default.scss
@@ -1049,5 +1049,5 @@ aside.gdbar {
 .align-center {
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  display: block;
 }
